works but without 1 specific case