@@ -12,7 +12,7 @@ public class Cursor {
     public volatile ArrayList<Integer> lostIDs = new ArrayList<Integer>();
     //    private Set<Point> granted = Collections.newSetFromMap(new ConcurrentHashMap<Point, Boolean>());
 //    private ArrayList<Point> granted = new ArrayList<Point>(); //max size is 3
-    private static Map<Point, ArrayList<Integer>> granted = new ConcurrentHashMap<Point, ArrayList<Integer>>();
+    private static Map<String, ArrayList<Integer>> granted = new ConcurrentHashMap<String, ArrayList<Integer>>();
 
     public void setStramStructure(Byte[][] stramStructure) {
         this.streamStructure = stramStructure;
@@ -23,21 +23,22 @@ public class Cursor {
         if (streamStructure == null) {
             return; //todo error noStructerEstablishedException
         }
-        for (int i = 0; i < streamStructure.length; i++) {
-            for (int j = 0; j < streamStructure[i].length; j++) {
+        for (Integer i = 0; i < streamStructure.length; i++) {
+            for (Integer j = 0; j < streamStructure[i].length; j++) {
                 switch (streamStructure[i][j]) {
                     case 0:
                         continue;
                     case 1:
-                        Point tmpPoint = new Point();
-                        tmpPoint.x = Long.valueOf(j);
-                        tmpPoint.y = Long.valueOf(i);
-                        ArrayList<Integer> grantedForPoint = granted.remove(tmpPoint);
+                        Integer dedicatedIslandID;
+//                        GrantedPoint tmpGrantedPoint = new GrantedPoint(new Long(j.longValue()), new Long(i.longValue()));
+                        String grantedPointKey = String.valueOf(j) + '&' + String.valueOf(i);
+                        Boolean test = granted.containsKey(grantedPointKey);
+                        ArrayList<Integer> grantedForPoint = granted.remove(grantedPointKey);
                         if (grantedForPoint == null || grantedForPoint.isEmpty()) {
                             if (lostIDs.isEmpty()) {
-                                tmpPoint.ID = ++idCounter; //todo uncertain
+                                dedicatedIslandID = ++idCounter; //todo uncertain
                             } else {
-                                tmpPoint.ID = lostIDs.remove(0); //todo FIFO
+                                dedicatedIslandID = lostIDs.remove(0); //todo FIFO error
                             }
                         } else {
                             Integer minGrantedID = Integer.MAX_VALUE; //todo 1 index island is out - MAX_VALUE
@@ -46,10 +47,11 @@ public class Cursor {
                                     minGrantedID = pID;
                                 }
                             }
-                            tmpPoint.ID = minGrantedID; //todo
+                            dedicatedIslandID = minGrantedID; //todo
                         }
 
-                        ArrayList<Point> pointsOfIsland = Main.findedIslands.get(tmpPoint.ID);
+                        Point tmpPoint = new Point(j.longValue(), i.longValue(), dedicatedIslandID);
+                        ArrayList<Point> pointsOfIsland = Main.findedIslands.get(dedicatedIslandID);
                         if (pointsOfIsland != null) {
                             if (!pointsOfIsland.add(tmpPoint)) {
                                 System.out.println("Not added Island part (to ArrayList structure)");
@@ -65,51 +67,52 @@ public class Cursor {
                             }
                         }
 
-                        if (granted.remove(tmpPoint) == null) {
-                            System.out.println("Error during a granted point removing");
-                        }
+//                        if (granted.remove(grantedPointKey) == null) {
+//                            System.out.println("Error during a granted point removing");
+//                        }
                         if (j == 0) {
                             for (int m = 0; m < 2; m++) {
-                                Point grantedPoint = new Point(Long.valueOf(j + m), Long.valueOf(i + 1), tmpPoint.ID);
-                                ArrayList<Integer> grantedPointIDs = granted.get(grantedPoint);
-                                if (grantedForPoint == null) {
+//                                GrantedPoint grantedPoint = new GrantedPoint(Long.valueOf(j + m), Long.valueOf(i + 1));
+                                String keyOfGrantingPoint = String.valueOf(j + m) + '&' + String.valueOf(i + 1);
+                                ArrayList<Integer> grantedPointIDs = granted.get(keyOfGrantingPoint);
+                                if (grantedPointIDs == null) {
                                     grantedPointIDs = new ArrayList<Integer>();
-                                    grantedPointIDs.add(tmpPoint.ID);
-                                    granted.put(grantedPoint, grantedPointIDs); //todo error
+                                    grantedPointIDs.add(dedicatedIslandID);
+                                    granted.put(keyOfGrantingPoint, grantedPointIDs); //todo error
                                 } else {
-                                    grantedPointIDs.add(tmpPoint.ID); //todo error
-                                    granted.replace(grantedPoint, grantedPointIDs); //todo error
+                                    grantedPointIDs.add(dedicatedIslandID); //todo error
+                                    granted.replace(keyOfGrantingPoint, grantedPointIDs); //todo error
                                 }
                             }
                         } else if (j == (streamStructure[i].length - 1)) {
                             for (int m = 0; m < 2; m++) {
-                                Point grantedPoint = new Point(Long.valueOf(j - m), Long.valueOf(i + 1), tmpPoint.ID);
-                                ArrayList<Integer> grantedPointIDs = granted.get(grantedPoint);
-                                if (grantedForPoint == null) {
+//                                GrantedPoint grantedPoint = new GrantedPoint(Long.valueOf(j - m), Long.valueOf(i + 1));
+                                String keyOfGrantingPoint = String.valueOf(j - m) + '&' + String.valueOf(i + 1);
+                                ArrayList<Integer> grantedPointIDs = granted.get(keyOfGrantingPoint);
+                                if (grantedPointIDs == null) {
                                     grantedPointIDs = new ArrayList<Integer>();
                                     grantedPointIDs.add(tmpPoint.ID);
-                                    granted.put(grantedPoint, grantedPointIDs); //todo error
+                                    granted.put(keyOfGrantingPoint, grantedPointIDs); //todo error
                                 } else {
                                     grantedPointIDs.add(tmpPoint.ID); //todo error
-                                    granted.replace(grantedPoint, grantedPointIDs); //todo error
+                                    granted.replace(keyOfGrantingPoint, grantedPointIDs); //todo error
                                 }
                             }
                         } else {
                             for (int m = 0; m < 3; m++) {
-                                Point grantedPoint = new Point(Long.valueOf(j - 1 + m), Long.valueOf(i + 1), tmpPoint.ID); //todo out of border
-                                ArrayList<Integer> grantedPointIDs = granted.get(grantedPoint);
-                                if (grantedForPoint == null) {
+//                                GrantedPoint grantedPoint = new GrantedPoint(Long.valueOf(j - 1 + m), Long.valueOf(i + 1)); //todo out of border
+                                String keyOfGrantingPoint = String.valueOf(j - 1 + m) + '&' + String.valueOf(i + 1);
+                                ArrayList<Integer> grantedPointIDs = granted.get(keyOfGrantingPoint);
+                                if (grantedPointIDs == null) {
                                     grantedPointIDs = new ArrayList<Integer>();
                                     grantedPointIDs.add(tmpPoint.ID);
-                                    granted.put(grantedPoint, grantedPointIDs); //todo error
+                                    granted.put(keyOfGrantingPoint, grantedPointIDs); //todo error
                                 } else {
                                     grantedPointIDs.add(tmpPoint.ID); //todo error
-                                    granted.replace(grantedPoint, grantedPointIDs); //todo error
+                                    granted.replace(keyOfGrantingPoint, grantedPointIDs); //todo error
                                 }
                             }
                         }
-                    default:
-                        continue;
                 }
             }
         }
